# Modeling

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  pyproject.toml  run_models.sh  setup.sh
Stan_Models/models/: BT_model_1  BT_model_1.stan  BT_model_2  BT_model_2.stan  Karlis_and_Ntzoufras  Karlis_and_Ntzoufras_v2.stan  Poisson_model_1  Poisson_model_1.stan  Poisson_model_2  Poisson_model_2.stan  Poisson_model_v2  Poisson_model_v2.stan  Poisson_model_v2_real_data.stan
Stan_Models/notebooks/: 00.SBC_BT.ipynb  00.format_real_data.ipynb  01.SBC_BT.ipynb  01.SBC_Poisson.ipynb  02.SBC_Poisson.ipynb  03.SBC_KN.ipynb  03.SBC_Poisson_v2.ipynb  04.SBC_KN.ipynb  04.SBC_KN_v2.ipynb  05.SBC_KN_v2.ipynb  05.overdispersion.ipynb  06.overdispersion.ipynb  10.SBC_analysis.ipynb  11.2023_simulations.ipynb  11.simulations.ipynb  12.test.ipynb  20.BT_Simulation_Stan.ipynb  31.Evaluate_best_clubs_and_players.ipynb  SBC_KN.ipynb
Stan_Models/real_data/: BT_model_data.json  BT_model_data_2014_to_2023.json  BT_model_data_2019.json  BT_model_data_2019_to_2023.json  BT_model_data_2020.json  BT_model_data_2021.json  BT_model_data_2022.json  BT_model_data_2023.json  KN_model_data.json  KN_model_data_2014_to_2023.json  KN_model_data_2019.json  KN_model_data_2019_to_2023.json  KN_model_data_2020.json  KN_model_data_2021.json  KN_model_data_2022.json  KN_model_data_2023.json  Poisson_model_data.json  Poisson_model_data_2014_to_2023.json  Poisson_model_data_2019.json  Poisson_model_data_2019_to_2023.json  Poisson_model_data_2022.json  Poisson_model_data_2023.json  Poisson_with_players_model_data_2014_to_2023.json  Poisson_with_players_model_data_2019.json  Poisson_with_players_model_data_2019_to_2023.json  Poisson_with_players_model_data_2020.json  Poisson_with_players_model_data_2021.json  Poisson_with_players_model_data_2022.json  Poisson_with_players_model_data_2023.json
Stan_Models/results/: fit_Poisson_1_2019.csv  fit_Poisson_1_2019_round_1.csv  fit_Poisson_1_2019_round_10.csv  fit_Poisson_1_2019_round_11.csv  fit_Poisson_1_2019_round_12.csv  fit_Poisson_1_2019_round_13.csv  fit_Poisson_1_2019_round_14.csv  fit_Poisson_1_2019_round_15.csv  fit_Poisson_1_2019_round_16.csv  fit_Poisson_1_2019_round_17.csv  fit_Poisson_1_2019_round_18.csv  fit_Poisson_1_2019_round_19.csv  fit_Poisson_1_2019_round_2.csv  fit_Poisson_1_2019_round_20.csv  fit_Poisson_1_2019_round_21.csv  fit_Poisson_1_2019_round_22.csv  fit_Poisson_1_2019_round_23.csv  fit_Poisson_1_2019_round_24.csv  fit_Poisson_1_2019_round_25.csv  fit_Poisson_1_2019_round_26.csv  fit_Poisson_1_2019_round_27.csv  fit_Poisson_1_2019_round_28.csv  fit_Poisson_1_2019_round_29.csv  fit_Poisson_1_2019_round_3.csv  fit_Poisson_1_2019_round_30.csv  fit_Poisson_1_2019_round_31.csv  fit_Poisson_1_2019_round_32.csv  fit_Poisson_1_2019_round_33.csv  fit_Poisson_1_2019_round_34.csv  fit_Poisson_1_2019_round_35.csv  fit_Poisson_1_2019_round_36.csv  fit_Poisson_1_2019_round_37.csv  fit_Poisson_1_2019_round_38.csv  fit_Poisson_1_2019_round_4.csv  fit_Poisson_1_2019_round_5.csv  fit_Poisson_1_2019_round_6.csv  fit_Poisson_1_2019_round_7.csv  fit_Poisson_1_2019_round_8.csv  fit_Poisson_1_2019_round_9.csv  fit_Poisson_1_2020.csv  (+399 more)
Stan_Models/scripts/: poisson_model.py
models/: BT_model_1  BT_model_1.stan  BT_model_2  BT_model_2.stan  Karlis_and_Ntzoufras  Karlis_and_Ntzoufras.stan  Karlis_and_Ntzoufras_v2  Poisson_model_1.stan  Poisson_model_2.stan  Poisson_model_v2  Poisson_model_v2.stan  Poisson_model_v2_real_data  README.md  bad_prior_example.stan  bradley_terry_2.stan  bradley_terry_3.stan  bradley_terry_4.stan  bradley_terry_5.stan  bradley_terry_6.stan  bradley_terry_7.stan  bradley_terry_8.stan  karlis_ntzoufras_1.stan  karlis_ntzoufras_2.stan  poisson_1.stan  poisson_10.stan  poisson_3.stan  poisson_4.stan  poisson_5.stan  poisson_6.stan  poisson_7.stan  poisson_8.stan  poisson_9.stan
models/club_level/: bradley_terry_1.stan  bradley_terry_4.stan  poisson_10.stan  poisson_2.stan  poisson_3.stan  poisson_4.stan  poisson_5.stan  poisson_6.stan  poisson_7.stan  poisson_8.stan  poisson_9.stan
models/player_level/: bradley_terry_3.stan  bradley_terry_4.stan  poisson_1.stan  poisson_2.stan  poisson_3.stan  poisson_4.stan  poisson_6.stan  poisson_7.stan  poisson_8.stan  poisson_9.stan
notebooks/: 00.format_real_data.ipynb  01.SBC_BT.ipynb  03.SBC_Poisson_v2.ipynb  10.SBC_analysis.ipynb  11.simulations.ipynb  31.Evaluate_best_clubs_and_players.ipynb  match_level_parameters.ipynb  metrics_visualization.ipynb  pinnacle_metrics.ipynb  player_level_analysis.ipynb  players_data.ipynb  players_data_bivariate.ipynb  real_data_results.ipynb  sbc_analysis.ipynb  sbc_visualization.ipynb
real_data/inputs/: all_matches_2024.json  bradley_terry_data_2019_10.json  bradley_terry_data_2019_15.json  bradley_terry_data_2019_19.json  bradley_terry_data_2019_20.json  bradley_terry_data_2019_38.json  bradley_terry_data_2019_5.json  bradley_terry_data_2020_10.json  bradley_terry_data_2020_15.json  bradley_terry_data_2020_19.json  bradley_terry_data_2020_20.json  bradley_terry_data_2020_38.json  bradley_terry_data_2020_5.json  bradley_terry_data_2021_10.json  bradley_terry_data_2021_15.json  bradley_terry_data_2021_19.json  bradley_terry_data_2021_20.json  bradley_terry_data_2021_5.json  bradley_terry_data_2022_10.json  bradley_terry_data_2022_15.json  bradley_terry_data_2022_19.json  bradley_terry_data_2022_20.json  bradley_terry_data_2022_38.json  bradley_terry_data_2022_5.json  bradley_terry_data_2023_10.json  bradley_terry_data_2023_15.json  bradley_terry_data_2023_19.json  bradley_terry_data_2023_20.json  bradley_terry_data_2023_38.json  bradley_terry_data_2023_5.json  bradley_terry_data_2024_10.json  bradley_terry_data_2024_15.json  bradley_terry_data_2024_19.json  bradley_terry_data_2024_20.json  bradley_terry_data_2024_5.json  poisson_data_2019_10.json  (+32 more)
scripts/: analysis.py  bad_prior_example.py  bradley_terry_1.py  bradley_terry_2.py  calculate.py  constants.py  generators.py  nice_prior_example.py  plots.py  poisson_1.py  poisson_2.py  utils.py
(+27014 files in other folders)
